force-app/main/default/objects/Country_List__c/Country_List__c.object-meta.xml
<CustomObject>
    <description>CRM : Country/State/Region/Sub-Region/Territory: Contains the Country ISO Code, Name for all countries. Used to drive Region/Sub-Region/Territory information.
Need Public Read Only OWD for internal and external access.</description>
    <label>Country List</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Lists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>