force-app/main/default/objects/Country_List__c/fields/ISO_Code_3__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_3__c</fullName>
    <description>3 letter ISO Code</description>
    <inlineHelpText>3 letter ISO Code</inlineHelpText>
    <label>ISO Code (3-letter)</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>