force-app/main/default/objects/Country_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ISO_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Sub_Region__c</columns>
    <columns>Territory__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>